@@ -1,3 +1,7 @@
+Wed Oct  9 00:57:03 1996  Kevin Layer  <layer@freezer>
+
+	* Makefile: fix rdist rule
+
 *******************************************************************************
 2.0.20.alpha.5 release for ACL on Windows
 *******************************************************************************
